force-app/main/default/objects/To_Do__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action 1</fullName>
            </value>
            <value>
                <fullName>Action 2</fullName>
            </value>
            <value>
                <fullName>Action 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>