force-app/main/default/objects/To_Do__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>To Do&apos;s</relationshipLabel>
    <relationshipName>To_Do_s</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>